; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/ntpd/extr_ntp_config.c_config_reset_counters.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/ntpd/extr_ntp_config.c_config_reset_counters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i32, %struct.TYPE_5__* }

@.str = private unnamed_addr constant [39 x i8] c"config_reset_counters %s (%d) invalid\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*)* @config_reset_counters to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @config_reset_counters(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %4 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call %struct.TYPE_5__* @HEAD_PFIFO(i32 %6)
  store %struct.TYPE_5__* %7, %struct.TYPE_5__** %3, align 8
  br label %8

8:                                                ; preds = %41, %1
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %10 = icmp ne %struct.TYPE_5__* %9, null
  br i1 %10, label %11, label %45

11:                                               ; preds = %8
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  switch i32 %14, label %15 [
    i32 134, label %26
    i32 133, label %28
    i32 132, label %30
    i32 131, label %32
    i32 130, label %34
    i32 129, label %36
    i32 128, label %38
  ]

15:                                               ; preds = %11
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @keyword(i32 %18)
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = sext i32 %22 to i64
  %24 = inttoptr i64 %23 to i8*
  %25 = call i32 @DPRINTF(i32 1, i8* %24)
  br label %40

26:                                               ; preds = %11
  %27 = call i32 (...) @peer_all_reset()
  br label %40

28:                                               ; preds = %11
  %29 = call i32 (...) @reset_auth_stats()
  br label %40

30:                                               ; preds = %11
  %31 = call i32 (...) @ctl_clr_stats()
  br label %40

32:                                               ; preds = %11
  %33 = call i32 (...) @io_clr_stats()
  br label %40

34:                                               ; preds = %11
  %35 = call i32 (...) @peer_clr_stats()
  br label %40

36:                                               ; preds = %11
  %37 = call i32 (...) @proto_clr_stats()
  br label %40

38:                                               ; preds = %11
  %39 = call i32 (...) @timer_clr_stats()
  br label %40

40:                                               ; preds = %38, %36, %34, %32, %30, %28, %26, %15
  br label %41

41:                                               ; preds = %40
  %42 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %43 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %42, i32 0, i32 1
  %44 = load %struct.TYPE_5__*, %struct.TYPE_5__** %43, align 8
  store %struct.TYPE_5__* %44, %struct.TYPE_5__** %3, align 8
  br label %8

45:                                               ; preds = %8
  ret void
}

declare dso_local %struct.TYPE_5__* @HEAD_PFIFO(i32) #1

declare dso_local i32 @DPRINTF(i32, i8*) #1

declare dso_local i32 @keyword(i32) #1

declare dso_local i32 @peer_all_reset(...) #1

declare dso_local i32 @reset_auth_stats(...) #1

declare dso_local i32 @ctl_clr_stats(...) #1

declare dso_local i32 @io_clr_stats(...) #1

declare dso_local i32 @peer_clr_stats(...) #1

declare dso_local i32 @proto_clr_stats(...) #1

declare dso_local i32 @timer_clr_stats(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
